# commandline-rust

./: README.md
catr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
findr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
